feat : Salary 관련 Entity 확장 및 Repository 추가